--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ cet_report_compiler_flags()
 # these are minimum required versions, not the actual product versions
 find_ups_product( cetbuildtools )
 find_ups_product(art_root_io)
+find_ups_product( larcore )
 find_ups_product( lardata )
 find_ups_product( larsim )
 find_ups_product( bxdecay0 )
