--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ cet_report_compiler_flags()
 find_ups_product( cetbuildtools )
 find_ups_product(art_root_io)
 find_ups_product( larcore )
+find_ups_product( lardataobj )
 find_ups_product( lardata )
 find_ups_product( larsim )
 find_ups_product( bxdecay0 )
