--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ cet_report_compiler_flags()
 find_ups_product( cetbuildtools )
 find_ups_product(art_root_io)
 find_ups_product( larcore )
+find_ups_product( larcoreobj )
 find_ups_product( lardataobj )
 find_ups_product( lardata )
 find_ups_product( larsim )
