--- a/larsimrad/BxDecay0/CMakeLists.txt
+++ b/larsimrad/BxDecay0/CMakeLists.txt
@@ -11,20 +11,17 @@ art_make(MODULE_LIBRARIES
          larcorealg_Geometry
          larcore_Geometry_Geometry_service
          nurandom_RandomUtils_NuRandomService_service
-         ${BXDECAY0}
+         BXDECAY0
          art::Framework_Services_Registry
          art_root_io::tfile_support
          art_root_io::TFileService_service
          art::Persistency_Provenance
          messagefacility::MF_MessageLogger
-         ${CLHEP}
          ROOT::Core
          ROOT::EG
          ROOT::Geom
-         ${ROOT_LIBRARIES}
         )
 
-#         ${BxDecay0_LIBRARIES}
 install_headers()
 install_fhicl()
 install_source()
